Archived label is not well displayed correctly in news details page on mobile (#253)

--- a/webapp/src/main/webapp/css/news.less
+++ b/webapp/src/main/webapp/css/news.less
@@ -3463,6 +3463,9 @@ p.caption-title:after {
 }
 
 @media (max-width: 520px) {
+  .newsArchived{
+    padding: 21px;
+  }
   .caption-description {
     display: none;
   }
